[package]
name = "shorty"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = {version = "0.5.0-rc.2", features=["json"]}
serde_json = "1.0"
serde = "1.0.139"
redis = {version = "0.21.5", features = ["tls"]}
harsh = "0.2.1"
dotenv = "0.15.0"